<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_us">เกี่ยวกับเงินเทอร์โบ</string>
    <string name="accept">ตกลง</string>
    <string name="account_menu">บัญชี</string>
    <string name="add_collection_person_button_label">เพิ่มบุคคลที่สามารถติดต่อได้</string>
    <string name="address">38/4 หมู่ 2 ตำบลคลองสาม อำเภอคลองหลวง จังหวัดปทุมธานี 12120</string>
    <string name="address_text">แขวงบางชัน เขตคลองสามวา กรุงเทพมหานคร</string>
    <string name="all_branch_title">สาขาทั้งหมด</string>
    <string name="allow">เปิดใช้งาน</string>
    <string name="allow_biometric_message">เพื่อความสะดวกในการเข้าใช้งานครั้งต่อไป</string>
    <string name="allow_biometric_title">เปิดใช้งานสแกนลายนิ้วมือ/ใบหน้า</string>
    <string name="allow_location">เปิดใช้งานการเข้าถึงตำแหน่งของคุณ</string>
    <string name="amount_due_text">ยอดครบกำหนดชำระ</string>
    <string name="amount_per_month_label">ค่างวดต่อเดือน</string>
    <string name="amount_zero">0.00</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">เงินเทอร์โบ</string>
    <string name="app_version_general_info">เวอร์ชันที่ใช้อยู่</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="application_ngernturbo_text">แอปพลิเคชันเงินเทอร์โบ</string>
    <string name="arrowIcon">arrow Icon</string>
    <string name="avatar">Avatar</string>
    <string name="back">กลับ</string>
    <string name="back_to_my_account">กลับหน้าบัญชีของฉัน</string>
    <string name="back_to_previous_page">กลับหน้าหลัก</string>
    <string name="back_to_product_detail_page">กลับหน้าสมัคร</string>
    <string name="baht_text">บาท</string>
    <string name="bank_name">กสิกรไทย</string>
    <string name="bank_text_number">7691-2414-30721</string>
    <string name="banned">ถูกระงับการขอ OTP 15 นาที</string>
    <string name="bannerImage">banner Image</string>
    <string name="barcode">Barcode</string>
    <string name="barcode_created_at_label">ข้อมูล Barcode ณ วันที่</string>
    <string name="barcode_image">barcode image</string>
    <string name="barcode_name">barcode name</string>
    <string name="bill_payment_channel_suggestion_text">รายการนี้ยังไม่สำเร็จ ลูกค้าสามารถนำไปชำระได้ที่ สาขาใกล้บ้านคุณ, แอปพลิเคชันธนาคาร, Counter Service (7–11) และ Lotus’s</string>
    <string name="bill_payment_title">QR/Barcode จ่ายบิล</string>
    <string name="biometric_banned_sub_title">เนื่องจากคุณสแกนลายนิ้วมือ/ใบหน้าเกินจำนวนครั้งที่กำหนด</string>
    <string name="biometric_banned_title">กรุณาเข้าใช้งานด้วยรหัส PIN</string>
    <string name="biometric_or_screen_lock_prompt_message">Use your biometric or screen lock to continue</string>
    <string name="biometric_os_sub_title">กรุณาสแกนเพื่อเข้าใช้งาน</string>
    <string name="biometric_os_title">เข้าใช้งานแอปเงินเทอร์โบ</string>
    <string name="biometric_prompt_message">Use your biometric to continue</string>
    <string name="biometric_setting">เข้าใช้งานด้วยการสแกนลายนิ้วมือ/ใบหน้า</string>
    <string name="biometric_setting_message">"เนื่องจากคุณยังไม่ได้ตั้งค่าตัวเลือกนี้
บนอุปกรณ์ของคุณ"</string>
    <string name="biometric_setting_title">กรุณาตั้งค่าการสแกนลายนิ้วมือ/ใบหน้าบนอุปกรณ์ของคุณ</string>
    <string name="bottom_nav_home">หน้าแรก</string>
    <string name="bottom_nav_loan">สนใจสมัคร</string>
    <string name="bottom_nav_my_account">บัญชีของฉัน</string>
    <string name="bottom_nav_notification">แจ้งเตือน</string>
    <string name="bottom_nav_other">อื่นๆ</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="branch_count">(6)</string>
    <string name="branch_detail_not_found">ไม่พบข้อมูลสาขา</string>
    <string name="branch_image">รูปภาพสาขา</string>
    <string name="branch_name">สาขาตลาดสดพระยาสมาน เลียบ- คลองสาม</string>
    <string name="branch_name_text">สุเหร่าคลองหนึ่ง</string>
    <string name="branch_not_found">ไม่พบสาขาใกล้คุณภายในรัศมี 30 กิโลเมตร</string>
    <string name="btn_check_member_information">ลงทะเบียน</string>
    <string name="bucket_remain">ค่างวดรับล่วงหน้าคงเหลือ</string>
    <string name="callCenterIcon">callCenter Icon</string>
    <string name="call_center">คอลเซ็นเตอร์</string>
    <string name="calling_branch">โทรหาสาขา</string>
    <string name="calling_phone_icon">Calling Phone Icon</string>
    <string name="cancel">ยกเลิก</string>
    <string name="car_loan_text">สินเชื่อรถยนต์</string>
    <string name="carousel">Carousel</string>
    <string name="case_of_paying_installments">กรณีจ่ายค่างวดเกินยอดครบกำหนด</string>
    <string name="change_fail_description">ไม่สามารถตั้งรหัส PIN ใหม่เหมือนรหัสปัจจุบันได้</string>
    <string name="change_pin_code_setting">เปลี่ยนรหัส PIN</string>
    <string name="change_pin_code_success">เปลี่ยนรหัส PIN สำเร็จ</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="click_for_edit_principle">click for edit principle</string>
    <string name="clickable_arrow">arrow</string>
    <string name="clock_icon">Clock Icon</string>
    <string name="close">ปิดทำการ</string>
    <string name="close_contract">ปิดสัญญา</string>
    <string name="collateral_info">8กย 7496 พระนครศรีอยุธยา</string>
    <string name="collateral_info_bnpl_text">ข้อมูลสินค้า</string>
    <string name="collateral_info_text">ข้อมูลหลักประกัน</string>
    <string name="collection_fee_label">ค่าทวงถาม</string>
    <string name="collection_person_first_name_hint">ชื่อ (ไทย)</string>
    <string name="collection_person_first_name_placeholder">ระบุชื่อ (ไม่ต้องมีคำนำหน้า)</string>
    <string name="collection_person_last_name_hint">นามสกุล (ไทย)</string>
    <string name="collection_person_last_name_placeholder">ระบุนามสกุล</string>
    <string name="collection_person_phone_number_hint">หมายเลขโทรศัพท์มือถือ</string>
    <string name="collection_person_phone_number_placeholder">ระบุหมายเลขโทรศัพท์มือถือ 10 หลัก</string>
    <string name="collection_person_relationship_hint">ความสัมพันธ์</string>
    <string name="collection_person_relationship_placeholder">ตัวอย่าง : บิดา มารดา</string>
    <string name="collection_person_title_placeholder_text">บุคคลที่ 1</string>
    <string name="collection_person_title_required_remark_text">*</string>
    <string name="com.crashlytics.android.build_id">728d77205cf145cf8f62d1d434cae4ea</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="delete_collection_person_button_description">Delete collection person button</string>
    <string name="description_back">icon back on tool bar</string>
    <string name="description_bg">background result change pin</string>
    <string name="description_icon">icon show the result</string>
    <string name="icon_back">icon_back</string>
    <string name="imageview_description">this for description</string>
    <string name="installment_label">ค่างวด</string>
    <string name="loan_register_car_title_text">สินเชื่อรถยนต์</string>
    <string name="max_principle_detail">สูงสุด</string>
    <string name="max_principle_value">-</string>
    <string name="min_principle_detail">ขั้นต่ำ</string>
    <string name="min_principle_value">-</string>
    <string name="penalty_fee_label">ค่าปรับ</string>
    <string name="reset_pin_code_successfully">ตั้งรหัส PIN ใหม่สำเร็จ</string>
    <string name="send_info_description_text">"เจ้าหน้าที่จะติดต่อกลับโดยเร็วที่สุด
ขอบคุณที่สมัครใช้บริการกับเงินเทอร์โบ"</string>
    <string name="send_info_success_text">ส่งข้อมูลการสมัครฯ สำเร็จ</string>
    <string name="sign_in_button">เข้าสู่ระบบ</string>
    <string name="slider_principle_description">Slider for select amount</string>
    <string name="toolbar_change_pin_code">เปลี่ยนรหัส PIN</string>
    <string name="toolbar_forgot">ตั้งรหัส PIN ใหม่</string>
</resources>