<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/bottom_navigation_icon_home" android:id="@id/bottomNavHome" android:title="@string/bottom_nav_home" />
    <item android:icon="@drawable/bottom_navigation_icon_my_account" android:id="@id/bottomNavMyAccount" android:title="@string/bottom_nav_my_account" />
    <item android:icon="@drawable/bottom_navigation_icon_loan" android:id="@id/bottomNavLoan" android:title="@string/bottom_nav_loan" />
    <item android:icon="@drawable/bottom_navigation_icon_notification" android:id="@id/bottomNavNotification" android:title="@string/bottom_nav_notification" />
    <item android:icon="@drawable/bottom_navigation_icon_other" android:id="@id/bottomNavOther" android:title="@string/bottom_nav_other" />
</menu>