<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:paddingTop="16.0dip" android:focusable="true" android:focusableInTouchMode="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textColor="@color/font_dust" android:id="@id/tvTitleContactPerson" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/collection_person_title_placeholder_text" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/text_title2" />
    <TextView android:textColor="@color/font_red" android:id="@id/tvRequiredContactPersonMark" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/collection_person_title_required_remark_text" android:layout_marginStart="2.0dip" app:layout_constraintStart_toEndOf="@id/tvTitleContactPerson" app:layout_constraintTop_toTopOf="parent" style="@style/text_title2.normal" />
    <ImageView android:id="@id/btnDeleteCollectionPerson" android:layout_width="18.0dip" android:layout_height="20.0dip" android:src="@drawable/ic_trash" android:contentDescription="@string/delete_collection_person_button_description" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout android:orientation="vertical" android:id="@id/containerContactPersonForm" android:background="@drawable/tenor_background" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:backgroundTint="@color/bg_pale_grey" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tvTitleContactPerson">
        <com.google.android.material.textfield.TextInputLayout android:id="@id/layoutFirstName" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" android:hint="@string/collection_person_first_name_hint" app:boxBackgroundColor="@color/white" app:boxStrokeWidth="1.0dip" app:boxStrokeWidthFocused="1.0dip" app:placeholderText="@string/collection_person_first_name_placeholder" app:placeholderTextAppearance="@style/text_title2.normal" app:placeholderTextColor="@color/font_dust" style="@style/custom_outline_box_online_booking">
            <com.google.android.material.textfield.TextInputEditText android:theme="@style/text_field" android:textColor="@color/font_grey" android:id="@id/inputFirstName" android:paddingTop="2.0dip" android:paddingBottom="2.0dip" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="48.0dip" android:maxLength="255" android:inputType="text" android:imeOptions="actionDone" style="@style/text_title1.normal" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout android:id="@id/layoutLastName" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" android:hint="@string/collection_person_last_name_hint" app:boxBackgroundColor="@color/white" app:boxStrokeWidth="1.0dip" app:boxStrokeWidthFocused="1.0dip" app:placeholderText="@string/collection_person_last_name_placeholder" app:placeholderTextAppearance="@style/text_title2.normal" app:placeholderTextColor="@color/font_dust" style="@style/custom_outline_box_online_booking">
            <com.google.android.material.textfield.TextInputEditText android:theme="@style/text_field" android:textColor="@color/font_grey" android:id="@id/inputLastName" android:paddingTop="2.0dip" android:paddingBottom="2.0dip" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="48.0dip" android:maxLength="255" android:inputType="text" android:imeOptions="actionDone" style="@style/text_title1.normal" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout android:id="@id/layoutRelationship" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" android:hint="@string/collection_person_relationship_hint" app:boxBackgroundColor="@color/white" app:boxStrokeWidth="1.0dip" app:boxStrokeWidthFocused="1.0dip" app:placeholderText="@string/collection_person_relationship_placeholder" app:placeholderTextAppearance="@style/text_title2.normal" app:placeholderTextColor="@color/font_dust" style="@style/custom_outline_box_online_booking">
            <com.google.android.material.textfield.TextInputEditText android:theme="@style/text_field" android:textColor="@color/font_grey" android:id="@id/inputRelationship" android:paddingTop="2.0dip" android:paddingBottom="2.0dip" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="48.0dip" android:maxLength="255" android:inputType="text" android:imeOptions="actionDone" style="@style/text_title1.normal" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout android:id="@id/layoutPhoneNumber" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/collection_person_phone_number_hint" app:boxBackgroundColor="@color/white" app:boxStrokeWidth="1.0dip" app:boxStrokeWidthFocused="1.0dip" app:placeholderText="@string/collection_person_phone_number_placeholder" app:placeholderTextAppearance="@style/text_title2.normal" app:placeholderTextColor="@color/font_dust" style="@style/custom_outline_box_online_booking">
            <com.google.android.material.textfield.TextInputEditText android:theme="@style/text_field" android:textColor="@color/font_grey" android:id="@id/inputPhoneNumber" android:paddingTop="2.0dip" android:paddingBottom="2.0dip" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="48.0dip" android:maxLength="255" android:inputType="phone" android:imeOptions="actionDone" app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" style="@style/text_title1.normal" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>