<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/result_success_bg" android:scaleType="fitXY" android:contentDescription="@string/description_bg" />
    <androidx.appcompat.widget.Toolbar android:id="@id/toolBarBox" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="56.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
            <ImageView android:id="@id/backIcon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_back" android:contentDescription="@string/icon_back" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
            <TextView android:textColor="@color/black" android:id="@id/productTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/loan_register_car_title_text" android:layout_marginStart="30.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toEndOf="@id/backIcon" app:layout_constraintTop_toTopOf="parent" style="@style/text_heading" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>
    <View android:background="@color/line_grey" android:layout_width="fill_parent" android:layout_height="1.0dip" app:layout_constraintTop_toBottomOf="@id/toolBarBox" />
    <ImageView android:id="@id/imageResult" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="48.0dip" android:src="@drawable/ic_send_register_info_success" android:contentDescription="@string/description_icon" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/toolBarBox" />
    <TextView android:theme="@style/text_heading" android:textColor="@color/font_pink" android:id="@id/headerText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/send_info_success_text" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/imageResult" />
    <TextView android:textColor="@color/font_grey" android:id="@id/subHeaderText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/send_info_description_text" android:textAlignment="center" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/headerText" style="@style/text_title2" />
    <androidx.appcompat.widget.AppCompatButton android:theme="@style/text_button" android:textColor="@color/white" android:id="@id/confirmButton" android:background="@drawable/round_corner_bg_pink" android:paddingTop="14.0dip" android:paddingBottom="14.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginBottom="24.0dip" android:text="@string/accept" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" android:stateListAnimator="@null" android:backgroundTint="@color/primary_button_color" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>