<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/sliderAmountSection" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.slider.Slider android:value="1" android:id="@id/sliderAmount" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip" android:layout_marginRight="40.0dip" android:stepSize="1.0" android:contentDescription="@string/slider_principle_description" android:valueFrom="0" android:valueTo="1" android:layout_marginHorizontal="40.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.0" style="@style/slider_finance_style" />
    <TextView android:id="@id/minPrincipleDetail" android:layout_width="26.0dip" android:layout_height="0.0dip" android:layout_marginTop="32.0dip" android:text="@string/min_principle_detail" android:layout_marginEnd="7.0dip" app:layout_constraintBottom_toTopOf="@id/minPrincipleValue" app:layout_constraintEnd_toStartOf="@id/sliderAmount" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/text_payment_amount_detail" />
    <TextView android:id="@id/maxPrincipleDetail" android:layout_width="28.0dip" android:layout_height="fill_parent" android:layout_marginTop="32.0dip" android:text="@string/max_principle_detail" android:layout_marginStart="5.0dip" app:layout_constraintBottom_toTopOf="@id/maxPrincipleValue" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="1.0" app:layout_constraintStart_toEndOf="@id/sliderAmount" app:layout_constraintTop_toTopOf="parent" style="@style/text_payment_amount_detail" />
    <TextView android:id="@id/minPrincipleValue" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/min_principle_value" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/minPrincipleDetail" style="@style/text_payment_amount" />
    <TextView android:id="@id/maxPrincipleValue" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/max_principle_value" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@id/maxPrincipleDetail" style="@style/text_payment_amount" />
</androidx.constraintlayout.widget.ConstraintLayout>