<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/result_success_bg" android:scaleType="fitXY" android:contentDescription="@string/description_bg" />
    <androidx.appcompat.widget.Toolbar android:id="@id/toolbar_box" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="56.0dip" app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
            <ImageView android:id="@id/closeIcon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_close" android:contentDescription="@string/icon_back" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:tint="@color/medium_pink" />
            <TextView android:textColor="@color/font_grey" android:id="@id/textToolbar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/toolbar_forgot" android:layout_marginStart="32.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toEndOf="@id/closeIcon" app:layout_constraintTop_toTopOf="parent" style="@style/text_heading" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>
    <View android:background="@color/line_grey" android:layout_width="fill_parent" android:layout_height="1.0dip" app:layout_constraintTop_toBottomOf="@id/toolbar_box" />
    <ImageView android:id="@id/imageSuccess" android:layout_width="100.0dip" android:layout_height="100.0dip" android:layout_marginTop="48.0dip" android:src="@drawable/ic_change_fail" android:contentDescription="@string/imageview_description" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/toolbar_box" />
    <TextView android:textColor="@color/font_pink" android:id="@id/textHeader" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/reset_pin_code_successfully" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/imageSuccess" style="@style/text_heading" />
    <TextView android:textColor="@color/font_grey" android:id="@id/textSub" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:textAlignment="center" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/textHeader" style="@style/text_title2" />
    <androidx.appcompat.widget.AppCompatButton android:textColor="@color/white" android:id="@id/buttonSignIn" android:background="@drawable/round_corner_bg_pink" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="24.0dip" android:text="@string/sign_in_button" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" android:backgroundTint="@color/primary_button_color" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" style="@style/text_title2" />
</androidx.constraintlayout.widget.ConstraintLayout>