<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/summaryDetailFixedBox" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip">
        <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/totalSummaryTextHolder" android:layout_width="0.0dip" android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintWidth_percent="0.5">
            <TextView android:theme="@style/text_title2" android:textColor="@color/font_grey" android:id="@id/totalSummaryText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/installment_label" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView android:theme="@style/text_title2" android:textColor="@color/font_grey" android:id="@id/totalSummary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/penalty_fee_label" android:layout_marginEnd="4.0dip" android:layout_alignParentEnd="true" app:layout_constraintEnd_toStartOf="@id/thaiTextBath" app:layout_constraintHorizontal_bias="1.0" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:theme="@style/text_title2" android:textColor="@color/font_grey" android:id="@id/thaiTextBath" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/baht_text" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>